--- a/.github/actions/dioxus-setup/action.yml
+++ b/.github/actions/dioxus-setup/action.yml
@@ -17,7 +17,8 @@ runs:
         - name: Install Dioxus
           shell: bash
           run: |
-              cargo install dioxus-cli --locked
+              cargo install cargo-binstall
+              cargo binstall dioxus-cli
 
         - name: Cache cargo builds
           uses: Swatinem/rust-cache@v2
