Ensure clippy added before invoking

--- a/.github/actions/rust-clippy/action.yml
+++ b/.github/actions/rust-clippy/action.yml
@@ -6,4 +6,6 @@ runs:
     steps:
         - name: Run Clippy
           shell: bash
-          run: cargo clippy --workspace --all-targets --all-features -- -D warnings
+          run: |
+              rustup component add clippy
+              cargo clippy --workspace --all-targets --all-features -- -D warnings
