Ensure rustfmt added before invoking

--- a/.github/actions/rust-fmt/action.yml
+++ b/.github/actions/rust-fmt/action.yml
@@ -6,4 +6,6 @@ runs:
     steps:
         - name: Run rustfmt
           shell: bash
-          run: cargo fmt --all -- --check
+          run: |
+              rustup component add rustfmt
+              cargo fmt --all -- --check
