--- a/.github/workflows/dioxus-bundle.yml
+++ b/.github/workflows/dioxus-bundle.yml
@@ -34,17 +34,20 @@ jobs:
             - name: Collect desktop bundles
               shell: bash
               run: |
+                  echo "**** +"
+                  echo $CARGO_PKG_NAME
+                  echo "**** -"
                   mkdir -p artifacts
                   if [ "${{ runner.os }}" = "Linux" ]; then
-                    cp target/dx/lingora/bundle/linux/bundle/deb/Lingora_0.1.49_amd64.deb artifacts/ 2>/dev/null || true
-                    cp target/dx/lingora/bundle/linux/bundle/rpm/Lingora-0.1.49-.x86_64.rpm artifacts/ 2>/dev/null || true
-                    cp target/dx/lingora/bundle/linux/bundle/appimage/Lingora_0.1.49_amd64.AppImage artifacts/ 2>/dev/null || true
+                    cp target/dx/$CARGO_PKG_NAME/bundle/linux/bundle/deb/*.deb artifacts/ 2>/dev/null || true
+                    cp target/dx/$CARGO_PKG_NAME/bundle/linux/bundle/rpm/*.rpm artifacts/ 2>/dev/null || true
+                    cp target/dx/$CARGO_PKG_NAME/bundle/linux/bundle/appimage/*.AppImage artifacts/ 2>/dev/null || true
                   elif [ "${{ runner.os }}" = "Windows" ]; then
-                    cp target\dx\lingora\bundle\windows\bundle/msi/Lingora_0.1.49_x64_en-US.msi artifacts/ 2>/dev/null || true
-                    cp target\dx\lingora\bundle\windows\bundle/nsis/Lingora_0.1.49_x64-setup.exe artifacts/ 2>/dev/null || true
+                    cp target\dx\$CARGO_PKG_NAME\bundle\windows\bundle/msi/*.msi artifacts/ 2>/dev/null || true
+                    cp target\dx\$CARGO_PKG_NAME\bundle\windows\bundle/nsis/*.exe artifacts/ 2>/dev/null || true
                   elif [ "${{ runner.os }}" = "macOS" ]; then
-                    cp target/dx/lingora/bundle/macos/bundle/macos/Lingora.app artifacts/ 2>/dev/null || true
-                    cp target/dx/lingora/bundle/macos/bundle/dmg/Lingora_0.1.49_aarch64.dmg artifacts/ 2>/dev/null || true
+                    cp target/dx/$CARGO_PKG_NAME/bundle/macos/bundle/macos/*.app artifacts/ 2>/dev/null || true
+                    cp target/dx/$CARGO_PKG_NAME/bundle/macos/bundle/dmg/*.dmg artifacts/ 2>/dev/null || true
                   fi
 
             - name: Upload artifact
@@ -73,8 +76,11 @@ jobs:
                   ls target/dx/scopa/release
                   ls target/dx/scopa/release/web
                   ls target/dx/scopa/release/web/public
+                  echo "**** +"
+                  echo $CARGO_PKG_NAME
+                  echo "**** -"
                   mkdir -p artifacts
-                  zip -r artifacts/web-bundle.zip target/dx/scopa/release/web/public
+                  zip -r artifacts/web-bundle.zip target/dx/$CARGO_PKG_NAME/release/web/public
 
             - name: Upload artifact
               uses: actions/upload-artifact@v4
