Add enabling env variables

--- a/.github/workflows/dioxus-qa.yml
+++ b/.github/workflows/dioxus-qa.yml
@@ -19,6 +19,7 @@ jobs:
         if: ${{ inputs.platform == 'all' || inputs.platform == 'desktop' }}
         name: Desktop QA (${{ matrix.os }})
         runs-on: ${{ matrix.os }}
+        env: ${{ inputs }}
         strategy:
             matrix:
                 os: [ubuntu-latest, windows-latest, macos-latest]
@@ -38,6 +39,7 @@ jobs:
         if: ${{ inputs.platform == 'all' || inputs.platform == 'web' }}
         name: Web QA
         runs-on: ubuntu-latest
+        env: ${{ inputs }}
         steps:
             - uses: nigeleke/github/.github/actions/os-prerequisites@main
               with:
@@ -53,6 +55,7 @@ jobs:
         if: ${{ inputs.platform == 'all' || inputs.platform == 'android' }}
         name: Android QA
         runs-on: ubuntu-latest
+        env: ${{ inputs }}
         steps:
             - uses: nigeleke/github/.github/actions/os-prerequisites@main
               with:
@@ -89,6 +92,7 @@ jobs:
         if: ${{ inputs.platform == 'all' || inputs.platform == 'ios' }}
         name: iOS QA
         runs-on: macos-latest
+        env: ${{ inputs }}
         steps:
             - uses: nigeleke/github/.github/actions/os-prerequisites@main
               with:
