--- a/.github/actions/rust-llvm-cov/action.yml
+++ b/.github/actions/rust-llvm-cov/action.yml
@@ -15,4 +15,4 @@ runs:
           shell: bash
           run: |
               cargo llvm-cov clean --workspace
-              cargo llvm-cov --workspace --all-features --lcov --output-path lcov.info
+              cargo llvm-cov --workspace --all-features --cobertura --output-path=target/cobertura.xml
