--- a/.github/workflows/rust-publish.yml
+++ b/.github/workflows/rust-publish.yml
@@ -4,7 +4,7 @@ on:
     workflow_call:
         secrets:
             CODECOV_TOKEN:
-                required: false
+                required: true
 
 permissions:
     contents: write
@@ -20,6 +20,5 @@ jobs:
             - uses: nigeleke/github/.github/actions/rust-docs@main
             - uses: nigeleke/github/.github/actions/rust-llvm-cov@main
             - uses: nigeleke/github/.github/actions/codecov-publish@main
-              env:
-                  codecov-token: "${{ secrets.CODECOV_TOKEN }}"
             - uses: nigeleke/github/.github/actions/gh-pages-publish@main
+              secrets: inherit
