--- a/.github/workflows/rust-publish.yml
+++ b/.github/workflows/rust-publish.yml
@@ -20,5 +20,6 @@ jobs:
             - uses: nigeleke/github/.github/actions/rust-docs@main
             - uses: nigeleke/github/.github/actions/rust-llvm-cov@main
             - uses: nigeleke/github/.github/actions/codecov-publish@main
+              env:
+                  CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
             - uses: nigeleke/github/.github/actions/gh-pages-publish@main
-              secrets: inherit
